test/errors/type/collections/set/__get.yasl
echo collections.set().__get([], true)
