test/errors/type/collections/set/__get.yasl.err
TypeError: collections.set.__get expected arg in position 0 to be of type set, got arg of type list. (line 1)
